# daz-mcp-server

./: .gitignore  ASYNC_OPERATIONS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SKILL_ACTORS.md  SKILL_CINEMA.md  SKILL_DAZSCRIPT.md  SKILL_DEVELOPMENT.md  SKILL_SCENE.md  daz_script_spec.d.ts  integration_test.py  jsconfig.json  pyproject.toml  sample.dsa  transfer_note.md
src/vangard_daz_mcp/: dazscript_docs.json  genesis_bones.json  server.py
tests/: conftest.py  test_actors_integration.py  test_animation_integration.py  test_async_integration.py  test_batch_integration.py  test_camera_integration.py  test_choreography_integration.py  test_content_integration.py  test_core_integration.py  test_lighting_integration.py  test_phase5_integration.py  test_render_integration.py  test_scene_integration.py  test_scene_state_integration.py  test_server.py
